--- a/content/package.json
+++ b/content/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "change-case": "^4.1.1",
     "jss": "^10.4.0",
     "jss-rtl": "^0.3.0",
     "lodash": "^4.17.20",
@@ -16,6 +17,7 @@
     "nprogress": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-feather": "^2.0.8",
     "react-helmet": "^6.1.0",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
