--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "engines": {
     "node": "10.19.0",
-    "yarn": "1.22.4"
+    "npm": "6.14.4"
   },
   "dependencies": {
     "@date-io/moment": "^2.8.0",
