--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jss": "^10.4.0",
     "jss-rtl": "^0.3.0",
     "lodash": "^4.17.20",
+    "netlify-cli": "^2.59.2",
     "notistack": "^0.9.17",
     "nprogress": "^0.2.0",
     "react": "^16.13.1",
