--- a/content/package.json
+++ b/content/package.json
@@ -2,6 +2,10 @@
   "name": "content",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "10.19.0",
+    "npm": "6.14.4"
+  },
   "dependencies": {
     "@date-io/moment": "^2.8.0",
     "@material-ui/core": "^4.11.0",
@@ -11,11 +15,15 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "change-case": "^4.1.1",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "jss": "^10.4.0",
     "jss-rtl": "^0.3.0",
     "lodash": "^4.17.20",
+    "netlify-cli": "^2.59.2",
     "notistack": "^0.9.17",
     "nprogress": "^0.2.0",
+    "path": "^0.12.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.8",
@@ -28,7 +36,7 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
