--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://alexperez52.github.io/Personal-Site",
   "name": "content",
   "version": "0.1.0",
   "private": true,
@@ -11,7 +12,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^3.2.10",
-    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "change-case": "^4.1.1",
@@ -20,7 +21,7 @@
     "jss": "^10.4.0",
     "jss-rtl": "^0.3.0",
     "lodash": "^4.17.20",
-    "netlify-cli": "^2.59.2",
+    "netlify-cli": "^8.0.5",
     "notistack": "^0.9.17",
     "nprogress": "^0.2.0",
     "path": "^0.12.7",
@@ -33,13 +34,15 @@
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -55,5 +58,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
